net/tdesktop/TODO
FAILED: Telegram/CMakeFiles/Telegram.dir/SourceFiles/chat_helpers/spellchecker_common.cpp.o 
/usr/ports/pobj/tdesktop-3.3.0/bin/c++ -DDESKTOP_APP_DISABLE_CRASH_REPORTS -DDESKTOP_APP_DISABLE_WAYLAND_INTEGRATION -DDESKTOP_APP_USE_PACKAGED -DDESKTOP_APP_USE_PACKAGED_FONTS -DG_LOG_DOMAIN=\"Telegram\" -DLOTTIE_USE_CACHE -DLOT_BUILD -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_GUI_LIB -DQT_IMPLICIT_QCHAR_CONSTRUCTION -DQT_NETWORK_LIB -DQT_NO_CAST_FROM_BYTEARRAY -DQT_NO_DEBUG -DQT_NO_KEYWORDS -DQT_SVG_LIB -DQT_WIDGETS_LIB -DTDESKTOP_API_HASH=344583e45741c457fe1862106095a5eb -DTDESKTOP_API_ID=17349 -DTDESKTOP_DISABLE_AUTOUPDATE -DTDESKTOP_LAUNCHER_BASENAME=telegramdesktop -DTGCALLS_USE_STD_OPTIONAL -D_FORTIFY_SOURCE=2 -ITelegram/Telegram_autogen/include -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/SourceFiles -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_spellcheck -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/tgcalls -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/libtgvoip -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_base -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_rpl -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_crl -ITelegram/gen -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_tl -ITelegram/lib_ui/gen -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_ui -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_ui/emoji_suggestions -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_lottie -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_webrtc -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_storage -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_qr -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/QR/cpp -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_webview -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/SourceFiles/payments -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/rlottie/inc -I/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/statusnotifieritem -isystem /usr/local/include/minizip -isystem /usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/GSL/include -isystem /usr/local/include/X11/qt5/QtCore/5.15.2 -isystem /usr/local/include/X11/qt5/QtCore/5.15.2/QtCore -isystem /usr/local/include/X11/qt5/QtGui/5.15.2 -isystem /usr/local/include/X11/qt5/QtGui/5.15.2/QtGui -isystem /usr/local/include/X11/qt5 -isystem /usr/local/include/X11/qt5/QtCore -isystem /usr/local/lib/qt5/./mkspecs/openbsd-clang -isystem /usr/local/include/X11/qt5/QtGui -isystem /usr/X11R6/include -isystem /usr/local/include/X11/qt5/QtWidgets -isystem /usr/local/include/X11/qt5/QtNetwork -isystem /usr/local/include/X11/qt5/QtSvg -isystem /usr/local/include/X11/qt5/QtDBus -isystem /usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/range-v3/include -isystem /usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/ThirdParty/expected/include -isystem /usr/local/include/giomm-2.4 -isystem /usr/local/lib/giomm-2.4/include -isystem /usr/local/include -isystem /usr/local/include/glibmm-2.4 -isystem /usr/local/lib/glibmm-2.4/include -isystem /usr/local/include/glib-2.0 -isystem /usr/local/lib/glib-2.0/include -isystem /usr/local/include/sigc++-2.0 -isystem /usr/local/lib/sigc++-2.0/include -isystem /usr/local/include/gio-unix-2.0 -isystem /usr/local/include/AL -isystem /usr/local/include/dbusmenu-qt5 -O2 -pipe -DNDEBUG -fstack-protector-all -fstack-clash-protection -fPIC -fno-strict-aliasing -pipe -Wall -W -Wno-unused-parameter -Wno-switch -Wno-missing-field-initializers -Wno-sign-compare -Wno-deprecated -pthread -std=gnu++20 -Winvalid-pch -Xclang -include-pch -Xclang /usr/ports/pobj/tdesktop-3.3.0/build-amd64/Telegram/CMakeFiles/Telegram.dir/cmake_pch.hxx.pch -Xclang -include -Xclang /usr/ports/pobj/tdesktop-3.3.0/build-amd64/Telegram/CMakeFiles/Telegram.dir/cmake_pch.hxx -MD -MT Telegram/CMakeFiles/Telegram.dir/SourceFiles/chat_helpers/spellchecker_common.cpp.o -MF Telegram/CMakeFiles/Telegram.dir/SourceFiles/chat_helpers/spellchecker_common.cpp.o.d -o Telegram/CMakeFiles/Telegram.dir/SourceFiles/chat_helpers/spellchecker_common.cpp.o -c /usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/SourceFiles/chat_helpers/spellchecker_common.cpp
c++: warning: argument unused during compilation: '-fstack-clash-protection' [-Wunused-command-line-argument]
In file included from /usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/SourceFiles/chat_helpers/spellchecker_common.cpp:13:
/usr/ports/pobj/tdesktop-3.3.0/tdesktop-3.3.0-full/Telegram/lib_base/base/zlib_help.h:172:23: error: no matching function for call to 'unzLocateFile'
                        _error = _handle ? unzLocateFile(_handle, szFileName, iCaseSensitivity) : -1;
                                           ^~~~~~~~~~~~~
/usr/local/include/minizip/mz_compat.h:352:17: note: candidate function not viable: no known conversion from 'int' to 'unzFileNameComparer' (aka 'int (*)(void *, const char *, const char *)') for 3rd argument
ZEXPORT int     unzLocateFile(unzFile file, const char *filename, unzFileNameComparer filename_compare_func);
                ^
1 error generated.
